--- a/index.Rmd
+++ b/index.Rmd
@@ -57,30 +57,238 @@ A notebook looks like this:
 The best way to learn how to write and run code and formattable text in a Jupyter notebook is to do it. So we have created this worksheet as a step-by-step guide through it: https://github.com/UBC-DSCI/dsci-100/blob/master/materials/worksheet_01/worksheet_01.ipynb
 
 
-## Loading libraries in R
+## Loading a tabular dataset
 
-Often, we want to use code written by others that does not come along as a built-in part of the base R language. If others have made their code easily shareable by "packaging" it up as an R package and submitting it to [CRAN](https://cran.r-project.org/) (a place that hosts, shares and distributes R packages) then we can load it using the `library` function. Specifically, we would write: `library(PACKAGE_NAME)`. Below, we demonstrate how to load the `caret` package (that you will use later in this course for solving the data sceince problems listed above).
+Often, the first thing we need to do in data analysis is to load a dataset into R. Once we get our data into R, we would like to work with it as a data frame object. You can think of data frames as a spreadsheet-like object, where the rows are the observations collected/measured and the columns are the variables. 
 
-```{r load libraries}
-library(caret)
+The first data set we will work with is in a comma-separated file, or `.csv`, format. There are many functions available in R we could use to load a `.csv` file, but we are going to use `read_csv()` from the `tidyverse` package because it is fast it creates a "special" variant of the base R data frame object with several nice properties we'll discuss in further detail later in the course.
+
+In it's most basic use case, `read_csv()` expects that:
+
+- column names are present
+- `,` is the delimiter/separator
+-  there are no row names in the dataset 
+
+Let's explore how to do this! We will load a `.csv` file named "state_property_data.csv" that is in the same directory/folder as our notebook/script. This data file is from https://datausa.io/ and has US state-level property, income and population data from 2015. If we were to open this data in a plain text editor, it would look like this:
+
+```
+state,med_income,med_prop_val,population,mean_commute_minutes
+AK,64222,197300,733375,10.46830207
+AL,36924,94800,4830620,25.30990746
+AR,35833,83300,2958208,22.40108933
+AZ,44748,128700,6641928,20.58786
+CA,53075,252100,38421464,23.38085172
 ```
 
-## Create new variables and objects in R using the assignment symbol
+Here we now load the data into R. To do this, we first need to load the `tidyverse` library. We do this using the library function. Next we call the `read_csv()` and pass it a single argument, the path to the file - "state_property_data.csv" - as a string. This is the only argument we need to provide for this file because it satisfies the default arguments of the `read_csv` function that we just discussed. Later in the course, we'll learn more about how to deal with files where the default arguments are not appropriate, for example tab separated files or files with no headers.
 
-To assign value to an object in R, there are two possible ways - using either the assignment symbol `<-` or the equals symbol `=` (as is done in Python and many other languages). From a style perspective, the assignment symbol is prefered and is what we will use in this course.
-
-Here we use the assignment symbol to create an object named year and assign it the value of 1999:
-
-```{r assignment symbol}
-year <- 1999
+```
+library(tidyverse)
+read_csv("state_property_data.csv")
 ```
 
-It might seem a bit annoying to type out `<` and `-` instead of just `=` but there is a keyboard shortcut that can be used: 	Alt+- (Windows & Linux) or	Option+- (Mac).
-
-Now that we have an object named `year`, R remembers it and we can do things with it, such as add another number to it, and then print out the value:
-
-```{r doing things with variables}
-year <- year + 20
-print(year)
+```
+# A tibble: 52 x 5
+   state med_income med_prop_val population mean_commute_minutes
+   <chr>      <dbl>        <dbl>      <int>                <dbl>
+ 1 AK         64222       197300     733375                 10.5
+ 2 AL         36924        94800    4830620                 25.3
+ 3 AR         35833        83300    2958208                 22.4
+ 4 AZ         44748       128700    6641928                 20.6
+ 5 CA         53075       252100   38421464                 23.4
+ 6 CO         48098       198900    5278906                 19.5
+ 7 CT         69228       246450    3593222                 24.3
+ 8 DC         70848       475800     647484                 28.3
+ 9 DE         54976       228500     926454                 24.5
+10 FL         43355       125600   19645772                 24.8
+# ... with 42 more rows
 ```
 
+## Assigning value to an object
+
+When we loaded the US state-level property, income and population data in the last slide using `read_csv()`, we did not assign the output of this function to an object, so it was merely printed to the console and not stored anywhere. This is not that useful - what we would like to do is assign the output of the `read_csv()` function, a data frame, to an object so that we can use it later for analysis and visualization. 
+
+To assign value to an object in R, there are two possible ways - using either the assignment symbol or the equals symbol (as is done in Python). From a style perspective, the assignment symbol is prefered and is what we will use in this course. 
+
+Do note however, that the assignment symbol has a very different meaning with function argument definitions and is only used in special cases. In general, we use the equals symbol during function argument definitions.
+
+Let's now use the assignment symbol to store the US state-level property, income and population data in a data frame object that we call prop_data.
+
+```
+prop_data <- read_csv("state_property_data.csv")
+print(prop_data)
+```
+
+To preview the prop_data object, we can use the `print()` function.
+
+```
+# A tibble: 52 x 5
+   state med_income med_prop_val population mean_commute_minutes
+   <chr>      <dbl>        <dbl>      <int>                <dbl>
+ 1 AK         64222       197300     733375                 10.5
+ 2 AL         36924        94800    4830620                 25.3
+ 3 AR         35833        83300    2958208                 22.4
+ 4 AZ         44748       128700    6641928                 20.6
+ 5 CA         53075       252100   38421464                 23.4
+ 6 CO         48098       198900    5278906                 19.5
+ 7 CT         69228       246450    3593222                 24.3
+ 8 DC         70848       475800     647484                 28.3
+ 9 DE         54976       228500     926454                 24.5
+10 FL         43355       125600   19645772                 24.8
+# ... with 42 more rows
+``` 
+
+## Subsetting data frames with `select` & `filter`
+
+Now, we are going to learn how to select subsets of data from a data frame in R using the `tidyverse` functions `select()` and `filter()`. `select()` allows you to subset columns of a data frame, while `filter()` allows you to subset rows with specific values.
+
+Before we start using `select()` and `filter()`, let's take a look at the US state-level property, income and population data again to familiarize ourselves with it. We will do this by printing the data we loaded earlier in the chapter to the screen. 
+
+```
+print(prop_data)
+```
+
+```
+# A tibble: 52 x 5
+   state med_income med_prop_val population mean_commute_minutes
+   <chr>      <dbl>        <dbl>      <int>                <dbl>
+ 1 AK         64222       197300     733375                 10.5
+ 2 AL         36924        94800    4830620                 25.3
+ 3 AR         35833        83300    2958208                 22.4
+ 4 AZ         44748       128700    6641928                 20.6
+ 5 CA         53075       252100   38421464                 23.4
+ 6 CO         48098       198900    5278906                 19.5
+ 7 CT         69228       246450    3593222                 24.3
+ 8 DC         70848       475800     647484                 28.3
+ 9 DE         54976       228500     926454                 24.5
+10 FL         43355       125600   19645772                 24.8
+# ... with 42 more rows
+```
+
+When peak at the data frame we see there are 5 columns: 
+1. US state abbreviation
+2. Median household income
+3. Median property value
+4. US state population
+5. Mean communte time in minutes
+
+There are 52 rows in this dataset (corresponding to the 51 US states and the US territory, Puerto Rico). 
+
+Let's use `select()` to subset the state column from this data frame. To use `select()` to subset the state column, we'll provide the function with two arguments. The first argument is the name of the data frame object, here prop_data. The second argument is the column name that we want to subset, here state. `select()` returns a single column (the state column that we asked for) as a data frame object.
+
+
+```
+select(prop_data, state)
+```
+
+```
+# A tibble: 52 x 1
+   state
+   <chr>
+ 1 AK   
+ 2 AL   
+ 3 AR   
+ 4 AZ   
+ 5 CA   
+ 6 CO   
+ 7 CT   
+ 8 DC   
+ 9 DE   
+10 FL   
+# ... with 42 more rows
+```
+
+### Using `select` to subset multiple columns
+
+We can also use `select()` to subset multiple columns. Again, the first argument is the name of the data frame. Then we list all the columns we want as arguments separated by commas. Here the list was three columns: state, median property value and mean commute time in minutes.
+
+```
+select(prop_data, state, med_prop_val, mean_commute_minutes)
+```
+
+```
+# A tibble: 52 x 3
+   state med_prop_val mean_commute_minutes
+   <chr>        <dbl>                <dbl>
+ 1 AK         197300.                 10.5
+ 2 AL          94800.                 25.3
+ 3 AR          83300.                 22.4
+ 4 AZ         128700.                 20.6
+ 5 CA         252100.                 23.4
+ 6 CO         198900.                 19.5
+ 7 CT         246450.                 24.3
+ 8 DC         475800.                 28.3
+ 9 DE         228500.                 24.5
+10 FL         125600.                 24.8
+# ... with 42 more rows
+```
+
+### Using `select` to subset a range of columns
+
+We can also use `select()` to subest a range of columns using the colon. For example, to get all the columns from state to med_prop_val we provide the second arugument to `select()` as state:med_prop_val.
+
+```
+select(prop_data, state:med_prop_val)
+```
+
+```
+# A tibble: 52 x 3
+   state med_income med_prop_val
+   <chr>      <dbl>        <dbl>
+ 1 AK        64222.      197300.
+ 2 AL        36924.       94800.
+ 3 AR        35833.       83300.
+ 4 AZ        44748.      128700.
+ 5 CA        53075.      252100.
+ 6 CO        48098.      198900.
+ 7 CT        69228.      246450.
+ 8 DC        70848.      475800.
+ 9 DE        54976.      228500.
+10 FL        43355.      125600.
+# ... with 42 more rows
+```
+
+### Using `filter` to subset a single column
+
+We can use the `filter()` function to subset rows with desired values from a data frame of interest. Again, our first argument is the name of the data frame object, prop_data. The second argument is a logical statement to filter the rows, here we say that we are interested in rows where state equals NY (for New York).
+
+Filter returns a data frame object that has all the columns of the input data frame but with only the rows we asked for in our filter statement. 
+
+```
+filter(prop_data, state == "NY")
+```
+
+```
+# A tibble: 1 x 5
+  state med_income med_prop_val population mean_commute_minutes
+  <chr>      <dbl>        <dbl>      <int>                <dbl>
+1 NY        50839.      134150.   19673174                 24.4
+```
+
+### Using `filter` to get rows with values above a threshold
+
+
+If we are interested in finding information about the states who have a longer mean commute time than New York, whose mean commute time is 21.5 minutes, then we can provide an expression to filter to obtain rows where the value of mean_commute_minutes is greater than 21.5.
+
+We see that `filter()` returns to use a data frame with 33 rows indicating that there are 33 states with longer commute times on average than New York.
+
+```
+filter(prop_data, mean_commute_minutes > 21.5)
+```
+
+```
+# A tibble: 33 x 5
+   state med_income med_prop_val population mean_commute_minutes
+   <chr>      <dbl>        <dbl>      <int>                <dbl>
+ 1 AL        36924.       94800.    4830620                 25.3
+ 2 AR        35833.       83300.    2958208                 22.4
+ 3 CA        53075.      252100.   38421464                 23.4
+ 4 CT        69228.      246450.    3593222                 24.3
+ 5 DC        70848.      475800.     647484                 28.3
+ 6 DE        54976.      228500.     926454                 24.5
+ 7 FL        43355.      125600.   19645772                 24.8
+ 8 GA        37865.      101700.   10006693                 24.5
+ 9 IL        47898.       97350.   12873761                 22.6
+10 IN        47194.      111800.    6568645                 23.5
+# ... with 23 more rows
+```
