--- a/index.Rmd
+++ b/index.Rmd
@@ -54,7 +54,11 @@ A notebook looks like this:
 
 <img src="img/jupyter.png">
 
-The best way to learn how to write and run code and formattable text in a Jupyter notebook is to do it. So we have created this worksheet as a step-by-step guide through it: https://github.com/UBC-DSCI/dsci-100/blob/master/materials/worksheet_01/worksheet_01.ipynb
+We have created a short demo video to help you get started and introduce you to Jupyter: 
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/2yv4pEmFgnw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+However, the best way to learn how to write and run code and formattable text in a Jupyter notebook is to do it. So we have also created this worksheet as a step-by-step guide through it: https://github.com/UBC-DSCI/dsci-100/blob/master/materials/worksheet_01/worksheet_01.ipynb
 
 
 ## Loading a tabular dataset
