added video on how to preview textfile with Jupyter

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -56,6 +56,10 @@ avocado_data <- read_csv("/Users/dawkins/Documents/dsci-100/homework_02/data/avo
 
 So which one should you use? Well to ensure your code can be run across different machines, you should choose to use the relative path (and it's also less typing!). 
 
+See this video for another explanation: 
+
+<iframe width="840" height="473" src="https://www.youtube.com/embed/ephId3mYu9o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 ## Reading tabular data into R
 
 Now we will learn more about reading tabular data into R, as well as how to write tabular data to a file. Last chapter we learned about using the `tidyverse` `read_csv` when the file we read it matches that functions expected defaults (column names are present, `,` is the delimiter/separator and there are no row names in the dataset ). We will now learn how to read files where that is not the case. 
@@ -160,3 +164,13 @@ read_csv("https://github.com/swcarpentry/r-novice-gapminder/raw/gh-pages/data/ga
 #   pop_1997 <dbl>, pop_2002 <int>, pop_2007 <int>
 ```
 
+### Previewing a data file before reading it into R
+
+In all the examples above, we gave you previews of the data file before we read it into R. This is essential so you can see whether or not there are column names, what the delimiters are, and if there are lines you need to skip. You should do this yourself when trying to read in data files. In Jupyter, you can do this by using the Jupyter home menu to navigate to the file and clicking on it to preview it as a plain text file. We demonstrate this in the video below:
+
+<iframe width="840" height="473" src="https://www.youtube.com/embed/6orO4YMAyeQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+## Scraping data off the web using R
+
+To be added soon...
