added video on using the SelectorGadget tool

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -173,4 +173,6 @@ In all the examples above, we gave you previews of the data file before we read 
 
 ## Scraping data off the web using R
 
-To be added soon...
+To help select the data we would like to scrape from the web, we will use the SelectorGadget tool. It is an open source tool that simplifies generating and finding CSS selectors. We recommend you use the Chrome web browser to use this tool, and install the [selector gadget tool from the Chrome Web Store](https://chrome.google.com/webstore/detail/selectorgadget/mhjhnkcfbdhnjickkkdbjoemdmbfginb). Here is a short video on how to install and use the SelectorGadget tool to get a CSS selector for use in web scraping:
+
+<iframe width="840" height="473" src="https://www.youtube.com/embed/Aa61zxISsJ4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
