--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -276,7 +276,7 @@ page <- read_html("https://vancouver.craigslist.org/search/apa?min_bedrooms=1&ma
 > library(robotstxt)
 > paths_allowed("https://vancouver.craigslist.org/")
 > ```
-> If you see TRUE as the output, go ahead and continue web scraping, if you see FALSE, you need to STOP and pick another website to scrapte.
+> If you see TRUE as the output, go ahead and continue web scraping, if you see FALSE, you need to STOP and pick another website to scrape.
 
 Then we send the page object to the `html_nodes` function. We also provide that function with the CSS selectors we obtained from the selectorgadget tool. These should be surrounded by quotations. The `html_nodes` function select nodes from the HTML document using CSS selectors. nodes are the HTML tag pairs as well as the content between the tags. For our CSS selector `.result-price` and example node that would be selected would be: `<span class="result-price">$800</span>`
 
@@ -292,4 +292,4 @@ rent_text <- html_text(rent_nodes)
 head(rent_text)
 ```
 
-Are we done? Not quite... If you look at the data closely you see that each price is duplicated and that some extra information other than square footage came along with our web scraping. We need to spend some time wrangling to data in R to get it a better shape to answer our questions (the average rental price (per square footage) of the most recently available 1 bedroom apartments in Vancouver from https://vancouver.craigslist.org). But we are much closer to answering this question than we were! Next chapter we will learn more about data wrangling using R and finish answering that question.
+Are we done? Not quite... If you look at the data closely you see that each price is duplicated and that some extra information other than square footage came along with our web scraping. We need to spend some time wrangling our data in R to get it a better shape to answer our questions (the average rental price (per square footage) of the most recently available 1 bedroom apartments in Vancouver from https://vancouver.craigslist.org). But we are much closer to answering this question than we were! Next chapter we will learn more about data wrangling using R and finish answering that question.
