fixed header typo

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -48,7 +48,7 @@ If our computer's filesystem looked like the picture below, and we were working 
 avocado_data <- read_csv("data/avocado_prices.csv")
 ```
 
-##### Loading `avocado_prices.csv` using a relative path:
+##### Loading `avocado_prices.csv` using an absolute path:
 
 ```
 avocado_data <- read_csv("/Users/dawkins/Documents/dsci-100/homework_02/data/avocado_prices.csv")
