added link to web scraping legalities blog

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -277,6 +277,8 @@ page <- read_html("https://vancouver.craigslist.org/search/apa?min_bedrooms=1&ma
 > paths_allowed("https://vancouver.craigslist.org/")
 > ```
 > If you see TRUE as the output, go ahead and continue web scraping, if you see FALSE, you need to STOP and pick another website to scrape.
+>
+> Want to learn more? Read this interesting blog post titled ["Web Scraping and Crawling Are Perfectly Legal, Right?" by Benoit Bernard](https://benbernardblog.com/web-scraping-and-crawling-are-perfectly-legal-right/) that you might want to read (this is optional, not required reading).
 
 Then we send the page object to the `html_nodes` function. We also provide that function with the CSS selectors we obtained from the selectorgadget tool. These should be surrounded by quotations. The `html_nodes` function select nodes from the HTML document using CSS selectors. nodes are the HTML tag pairs as well as the content between the tags. For our CSS selector `.result-price` and example node that would be selected would be: `<span class="result-price">$800</span>`
 
